big design fixes

--- a/TalentShow/app/src/main/res/color/bottom_nav_bar_color.xml
+++ b/TalentShow/app/src/main/res/color/bottom_nav_bar_color.xml
@@ -4,7 +4,7 @@
     <item android:color="#777777"
         android:state_checked="false"/>
 
-    <item android:color="@color/whiteText"
+    <item android:color="@color/white"
         android:state_checked="true"/>
 
 </selector>
