--- a/TalentShow/app/src/main/res/drawable/blue_circle.xml
+++ b/TalentShow/app/src/main/res/drawable/blue_circle.xml
@@ -14,7 +14,7 @@
           android:endX="0"
           android:type="linear">
         <item android:offset="0" android:color="#FF33CC"/>
-        <item android:offset="1" android:color="#FF7F1EC6"/>
+        <item android:offset="1" android:color="#7F1EC6"/>
       </gradient>
     </aapt:attr>
   </path>
