--- a/TalentShow/app/src/main/res/drawable/share_btn.xml
+++ b/TalentShow/app/src/main/res/drawable/share_btn.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="475.082"
     android:viewportHeight="475.081">
   <path
-      android:fillColor="@color/whiteText"
+      android:fillColor="@color/white"
       android:pathData="M469.658,133.333L360.029,23.697c-3.621-3.617-7.909-5.424-12.854-5.424c-2.275,0-4.661,0.476-7.132,1.425
 			c-7.426,3.237-11.139,8.852-11.139,16.846v54.821h-45.683c-20.174,0-38.879,1.047-56.101,3.14
 			c-17.224,2.092-32.404,4.993-45.537,8.708c-13.134,3.708-24.983,8.326-35.547,13.846c-10.562,5.518-19.555,11.372-26.98,17.559
@@ -19,7 +19,7 @@
       tools:ignore="VectorPath" />
 
   <path
-      android:fillColor="@color/whiteText"
+      android:fillColor="@color/white"
       android:pathData="M395.996,292.356c-3.625-1.529-6.951-0.763-9.993,2.283c-4.948,4.568-10.092,8.093-15.42,10.564
 			c-3.433,1.902-5.141,4.66-5.141,8.277v61.104c0,12.562-4.466,23.308-13.415,32.26c-8.945,8.946-19.704,13.419-32.264,13.419
 			H82.222c-12.564,0-23.318-4.473-32.264-13.419c-8.947-8.952-13.418-19.697-13.418-32.26V137.039
