--- a/TalentShow/app/src/main/res/drawable/video_background.xml
+++ b/TalentShow/app/src/main/res/drawable/video_background.xml
@@ -6,16 +6,16 @@
     android:viewportHeight="189">
   <path
       android:pathData="M0,9C0,4.029 4.029,0 9,0H334C338.971,0 343,4.029 343,9V180C343,184.971 338.971,189 334,189H9C4.029,189 0,184.971 0,180V9Z"
-      android:fillAlpha="0.25">
+      android:fillAlpha="0.5">
     <aapt:attr name="android:fillColor">
-      <gradient 
+      <gradient
           android:startY="94.4999"
           android:startX="0"
           android:endY="94.4999"
           android:endX="343"
           android:type="linear">
         <item android:offset="0" android:color="#FF33CC"/>
-        <item android:offset="1" android:color="#FF7F1EC6"/>
+        <item android:offset="1" android:color="#7F1EC6"/>
       </gradient>
     </aapt:attr>
   </path>
