--- a/TalentShow/app/src/main/res/layout-ldpi/fragment_registration.xml
+++ b/TalentShow/app/src/main/res/layout-ldpi/fragment_registration.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@color/darkBackground"
+    android:background="@color/black"
     android:layout_height="match_parent">
 
     <ProgressBar
@@ -35,7 +35,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="17sp"
             android:text="@string/back"
             android:gravity="center|top"
@@ -66,7 +66,7 @@
         android:layout_marginEnd="14dp"
         android:textSize="15sp"
         android:gravity="center"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/white"
         android:text="@string/sign_up"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_reg_logo"
@@ -116,9 +116,9 @@
             android:hint="@string/enter_ur_name"
             android:textColorHint="@color/hint_text_color"
             android:layout_marginBottom="5dp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:background="@color/none_color"
-            android:textCursorDrawable="@color/whiteText"
+            android:textCursorDrawable="@color/white"
             app:layout_constraintStart_toEndOf="@id/fragment_filed1_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -165,12 +165,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:textSize="14sp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:inputType="textEmailAddress"
             android:background="@color/none_color"
-            android:textCursorDrawable="@color/whiteText"
+            android:textCursorDrawable="@color/white"
             android:hint="@string/enter_ur_mail"
             android:textColorHint="@color/hint_text_color"
             app:layout_constraintStart_toEndOf="@id/fragment_filed2_guideline"
@@ -219,12 +219,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:background="@color/none_color"
-            android:textCursorDrawable="@color/whiteText"
+            android:textCursorDrawable="@color/white"
             android:hint="@string/create_password"
             android:inputType="textPassword"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textColorHint="@color/hint_text_color"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -244,7 +244,7 @@
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="@string/i_accept_terms"
-        android:textColor="@color/regGrayColor"
+        android:textColor="@color/darkGrayText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/fragment_reg_continue"
@@ -253,7 +253,7 @@
     <TextView
         android:id="@+id/fragment_reg_continue"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="50dp"
@@ -261,7 +261,7 @@
         android:textSize="14sp"
         android:gravity="center"
         android:text="@string/to_sign_in"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
