--- a/TalentShow/app/src/main/res/layout/casting_card_view.xml
+++ b/TalentShow/app/src/main/res/layout/casting_card_view.xml
@@ -2,7 +2,6 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/card_back"
@@ -82,7 +81,7 @@
                     android:gravity="center_vertical"
                     android:lineSpacingExtra="1sp"
                     android:text="@string/activity_casting_name"
-                    android:textColor="@color/whiteText"
+                    android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toStartOf="@id/activity_casting_share_btn"
                     app:layout_constraintStart_toEndOf="@id/casting_activity_avatar"
@@ -109,7 +108,7 @@
                     android:gravity="start"
                     android:lineSpacingExtra="2sp"
                     android:text="Это описание к видео, которое написал автор, чтобы было понятно, что он хочет сказать своим творчеством. Наверное, тут очень ограничен обхем текста."
-                    android:textColor="@color/whiteText"
+                    android:textColor="@color/white"
                     android:textSize="13sp"
                     android:translationY="-1.05sp"
                     android:visibility="gone"
