--- a/TalentShow/app/src/main/res/layout/fragment_file_load_main.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_file_load_main.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/darkBackground"
+    android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,7 +25,7 @@
         android:layout_marginEnd="14dp"
         android:textSize="20sp"
         android:gravity="start"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/white"
         android:text="@string/load_new_video"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:layout_marginBottom="182dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/file_load_button_background"
+        android:background="@drawable/video_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_load_file_main_text1">
