--- a/TalentShow/app/src/main/res/layout/fragment_registration.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_registration.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/darkBackground"
+        android:background="@color/black"
         android:orientation="vertical">
 
         <ProgressBar
@@ -48,7 +48,7 @@
                 android:layout_marginStart="6dp"
                 android:gravity="center|top"
                 android:text="@string/back"
-                android:textColor="@color/whiteText"
+                android:textColor="@color/white"
                 android:textSize="17sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/fragment_reg_arrow"
@@ -64,7 +64,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.1"/>
+            app:layout_constraintVertical_bias="0.15"/>
 
         <TextView
             android:id="@+id/fragment_reg_text1"
@@ -74,7 +74,7 @@
             android:layout_marginEnd="16dp"
             android:gravity="center"
             android:text="@string/sign_up"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="33sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -121,11 +121,11 @@
                 android:layout_marginEnd="12dp"
                 android:layout_marginBottom="5dp"
                 android:background="@color/none_color"
-                android:textCursorDrawable="@color/whiteText"
+                android:textCursorDrawable="@color/white"
                 android:hint="@string/enter_ur_name"
                 android:paddingTop="5dp"
                 android:singleLine="true"
-                android:textColor="@color/whiteText"
+                android:textColor="@color/white"
                 android:textColorHint="@color/hint_text_color"
                 android:textSize="17sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -175,12 +175,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
                 android:background="@color/none_color"
-                android:textCursorDrawable="@color/whiteText"
+                android:textCursorDrawable="@color/white"
                 android:hint="@string/enter_ur_mail"
                 android:inputType="textEmailAddress"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:textColor="@color/whiteText"
+                android:textColor="@color/white"
                 android:textColorHint="@color/hint_text_color"
                 android:textSize="17sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -229,12 +229,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
                 android:background="@color/none_color"
-                android:textCursorDrawable="@color/whiteText"
+                android:textCursorDrawable="@color/white"
                 android:hint="@string/create_password"
                 android:inputType="textPassword"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:textColor="@color/whiteText"
+                android:textColor="@color/white"
                 android:textColorHint="@color/hint_text_color"
                 android:textSize="17sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -253,7 +253,7 @@
             android:layout_marginEnd="45dp"
             android:gravity="center"
             android:text="@string/i_accept_terms"
-            android:textColor="@color/regGrayColor"
+            android:textColor="@color/darkGrayText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_reg_field_3" />
@@ -261,15 +261,15 @@
         <TextView
             android:id="@+id/fragment_reg_continue"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/buttons_background"
             android:gravity="center"
             android:text="@string/to_sign_in"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
