--- a/TalentShow/app/src/main/res/layout/fragment_reset_password.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_reset_password.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/darkBackground"
+    android:background="@color/black"
     tools:context=".presentation.signing.fragments.resetpassword.ResetPasswordFragment">
 
 
@@ -12,8 +12,8 @@
         android:id="@+id/reset_password_box"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginTop="70dp"
         android:background="@drawable/auth_filed_backgroud"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,10 +49,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:textSize="17sp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:inputType="textEmailAddress"
             android:background="@color/none_color"
-            android:textCursorDrawable="@color/whiteText"
+            android:textCursorDrawable="@color/white"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:textColorHint="@color/hint_text_color"
@@ -65,18 +65,22 @@
 
     <Button
         android:id="@+id/reset_fragment_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Сбросить пароль"
-        android:textColor="@color/whiteText"
-        android:textSize="17sp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/buttons_background"
         android:gravity="center"
-        android:layout_marginTop="200dp"
+        android:text="Сбросить пароль"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/reset_password_box"
-        />
+        app:layout_constraintVertical_bias="0.008" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
