--- a/TalentShow/app/src/main/res/layout/fragment_video_best_main.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_video_best_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBackground">
+    android:background="@color/black">
 
 <!--    <com.deep.videotrimmer.DeepVideoTrimmer-->
 <!--        android:id="@+id/video_trimmer_main"-->
@@ -58,7 +58,7 @@
         android:id="@+id/fragment_video_choose_main_text1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/white"
         android:text="@string/best_30_seconds"
         android:textAppearance="@style/activity_star_video_best_heading"
         android:lineSpacingExtra="0sp"
