--- a/TalentShow/app/src/main/res/drawable/person_not_pressed.xml
+++ b/TalentShow/app/src/main/res/drawable/person_not_pressed.xml
@@ -1,11 +1,11 @@
 <vector
     android:height="26dp"
-    android:tint="#A3A3A3"
+    android:tint="@color/grayText"
     android:viewportHeight="20.0"
     android:viewportWidth="20.0"
     android:width="26dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <path
-        android:fillColor="#A3A3A3"
+        android:fillColor="@color/grayText"
         android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
 </vector>
