--- a/TalentShow/app/src/main/res/layout/activity_main_frame.xml
+++ b/TalentShow/app/src/main/res/layout/activity_main_frame.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="@color/darkBackground"
+    android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -36,7 +36,7 @@
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
-                android:textColor="@color/whiteText"
+                android:textColor="@color/white"
                 android:textSize="17sp"
                 android:text="@string/back"
                 android:gravity="center|top"
@@ -68,7 +68,7 @@
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
-                android:textColor="@color/whiteText"
+                android:textColor="@color/white"
                 android:textSize="17sp"
                 android:text="@string/back"
                 android:gravity="center|top"
@@ -89,7 +89,7 @@
             android:text="Выйти"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:layout_marginStart="18dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -102,7 +102,7 @@
             android:fontFamily="@font/quantico"
             android:gravity="center"
             android:text="@string/new_video"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="17sp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:fontFamily="@font/quantico"
             android:text="@string/save"
             android:layout_marginEnd="17dp"
@@ -150,7 +150,7 @@
             android:layout_width="wrap_content"
             android:layout_height="28dp"
             android:text="Сохранить"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="17sp"
             android:layout_marginEnd="16dp"
             android:visibility="invisible"
@@ -163,7 +163,7 @@
             android:layout_width="wrap_content"
             android:layout_height="28dp"
             android:text="Сохранить"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="17sp"
             android:layout_marginEnd="16dp"
             android:visibility="invisible"
