--- a/TalentShow/app/src/main/res/layout/activtiy_splash.xml
+++ b/TalentShow/app/src/main/res/layout/activtiy_splash.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBackground">
+    android:background="@color/black">
 
     <View
         android:id="@+id/splash_logo"
@@ -19,7 +19,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/white"
         android:fontFamily="@font/quantico"
         android:textSize="36sp"
         android:text="@string/xce_factor"
