--- a/TalentShow/app/src/main/res/layout/alertdialog_custom_view.xml
+++ b/TalentShow/app/src/main/res/layout/alertdialog_custom_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    android:background="@color/darkBackground">
+    android:background="@color/black">
 
     <TextView
         android:id="@+id/dialog_titile"
@@ -12,7 +12,7 @@
         android:text="@string/alert_dialog_title"
         android:padding="5dp"
 
-        android:textColor="@color/whiteText"
+        android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="bold"
         />
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:text="@string/alert_dialog_message"
         android:padding="15dp"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:layout_below="@id/dialog_titile"
         />
@@ -35,7 +35,7 @@
         android:text="@string/alert_dialog_cancel"
         android:layout_below="@id/dialog_tv"
         android:layout_alignParentRight="true"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/white"
         android:background="#00000000"
         />
     <Button
