--- a/TalentShow/app/src/main/res/layout/bottom_sheet_file_load.xml
+++ b/TalentShow/app/src/main/res/layout/bottom_sheet_file_load.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="180dp"
     android:orientation="vertical"
-    android:background="@color/lightDark"
+    android:background="@color/dialogBackground"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="16dp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:text="@string/capture_by_camera"/>
     </LinearLayout>
     <LinearLayout
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:layout_marginLeft="16dp"
             android:text="@string/choose_file"/>
     </LinearLayout>
