--- a/TalentShow/app/src/main/res/layout/casting_swipe_out_msg_view.xml
+++ b/TalentShow/app/src/main/res/layout/casting_swipe_out_msg_view.xml
@@ -6,8 +6,8 @@
     android:gravity="right"
     android:layout_height="425dp">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/dislike_swipe_ic"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/dislike"
         android:layout_margin="50dp" />
 </LinearLayout>
