--- a/TalentShow/app/src/main/res/layout/fragment_change_password.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_change_password.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/darkBackground"
+    android:background="@color/black"
     tools:ignore="LabelFor"
     tools:context=".presentation.main.fragments.profile.profileSettings.changePassword.ChangePasswordFragment">
 
@@ -49,10 +49,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:textSize="17sp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:inputType="textPassword"
             android:background="@color/none_color"
-            android:textCursorDrawable="@color/whiteText"
+            android:textCursorDrawable="@color/white"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             app:layout_constraintStart_toEndOf="@id/fragment_change_profile_filed1_guideline"
@@ -104,8 +104,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:textSize="17sp"
-            android:textColor="@color/whiteText"
-            android:textCursorDrawable="@color/whiteText"
+            android:textColor="@color/white"
+            android:textCursorDrawable="@color/white"
             android:inputType="textPassword"
             android:background="@color/none_color"
             android:paddingTop="5dp"
