--- a/TalentShow/app/src/main/res/layout/fragment_choose_auth.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_choose_auth.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/darkBackground">
+        android:background="@color/black">
 
         <View
             android:id="@+id/choose_auth_logo"
@@ -21,13 +21,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.2" />
+            app:layout_constraintVertical_bias="0.15" />
 
         <TextView
             android:id="@+id/choose_auth_logo_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:fontFamily="@font/quantico"
             android:textSize="36sp"
             android:text="@string/xce_factor"
@@ -39,13 +39,13 @@
         <TextView
             android:id="@+id/choose_auth_auth"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/buttons_background"
             android:gravity="center"
             android:text="@string/sing_in"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
         <TextView
             android:id="@+id/choose_auth_reg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="23dp"
             android:layout_marginEnd="32dp"
@@ -64,7 +64,7 @@
             android:background="@drawable/buttons_background"
             android:gravity="center"
             android:text="@string/sign_up"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
