--- a/TalentShow/app/src/main/res/layout/fragment_instruction.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_instruction.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/darkBackground">
+        android:background="@color/black">
 
         <View
             android:id="@+id/fragment_instruction_logo"
@@ -30,7 +30,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginTop="32dp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:text="@string/fragment_instruction_text"
             android:gravity="center"
@@ -41,20 +41,21 @@
         <TextView
             android:id="@+id/fragment_instruction_btn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="67dp"
+            android:layout_height="50dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/buttons_background"
             android:gravity="center"
             android:text="@string/begin_game"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_instruction_text" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_instruction_text"
+            app:layout_constraintVertical_bias="0.6" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
