--- a/TalentShow/app/src/main/res/layout/fragment_mail_confirm.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_mail_confirm.xml
@@ -2,14 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBackground"
+    android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/fragment_mail_confirm_text1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/white"
         android:textSize="34sp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -28,7 +28,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/darkGrayText"
         android:textSize="17sp"
         android:gravity="center"
         android:text="@string/confirm_via_link"
@@ -39,31 +39,37 @@
     <TextView
         android:id="@+id/fragment_mail_confirm_continue"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="93dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/buttons_background"
-        android:textSize="17sp"
         android:gravity="center"
         android:text="@string/ready"
-        android:textColor="@color/whiteText"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_mail_confirm_text2"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/fragment_mail_confirm_no_code"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="25dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
-        android:text="@string/no_code"
+        android:layout_marginBottom="32dp"
         android:gravity="center"
+        android:text="@string/no_code"
         android:textColor="@color/grayText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_mail_confirm_continue"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
