--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/darkBackground"
+        android:background="@color/black"
         tools:context=".presentation.main.fragments.profile.ProfileFragment"
         android:id="@+id/fragment_profile"
         tools:ignore="LabelFor" >
@@ -36,7 +36,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="600dp"
             android:text="@string/edit"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="12sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -60,7 +60,7 @@
             android:layout_width="30dp"
             android:layout_height="20dp"
             android:text="@string/edit_short"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="15sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/fragment_profile_image"
@@ -79,10 +79,10 @@
             android:enabled="false"
             android:importantForAutofill="no"
             android:inputType="textMultiLine"
-            android:textCursorDrawable="@color/whiteText"
+            android:textCursorDrawable="@color/white"
             android:maxLength="40"
             android:padding="10dp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/fragment_profile_image"
@@ -108,7 +108,7 @@
             android:text="@string/zero_likes"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="16dp"
@@ -136,7 +136,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/description"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:layout_marginTop="25dp"
             android:layout_marginStart="16dp"
@@ -154,9 +154,9 @@
             android:layout_marginEnd="16dp"
             android:importantForAutofill="no"
             android:inputType="text"
-            android:textColor="@color/grayText"
-            android:hint="@string/you_have_no_description"
-            android:textCursorDrawable="@color/whiteText"
+            android:textCursorDrawable="@color/white"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -170,7 +170,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="17dp"
             android:text="@string/uploaded_videos"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -182,17 +182,16 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="11dp"
             android:id="@+id/fragment_profile_container1"
-            app:cardBackgroundColor="@color/darkBackground"
+            app:cardBackgroundColor="@color/black"
             app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv"
             app:layout_constraintStart_toStartOf="parent"
             app:cardCornerRadius="9dp"
             app:layout_constraintEnd_toStartOf="@id/fragment_profile_container2">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/fragment_profile_video_container1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/file_load_button_background">
+                android:background="@drawable/video_background">
 
                 <View
                     android:id="@+id/fragment_profile_settings1"
@@ -210,18 +209,29 @@
                     android:id="@+id/fragment_profile_video_1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/darkBackground"
+                    android:background="@color/black"
                     android:visibility="gone"
 
 
                     />
 
-                <ImageButton
-                    android:id="@+id/fragment_profile_add_video_btn_1"
+                <ImageView
+                    android:id="@+id/fragment_profile_add_icon1"
                     android:layout_width="22dp"
                     android:layout_height="22dp"
-                    android:background="@drawable/fragment_profile_add_video_img"
+                    android:background="@drawable/plus_icon"
+                    android:clickable="false"
                     android:contentDescription="@string/add"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/fragment_profile_add_video_btn_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/none_color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -231,10 +241,10 @@
                     android:id="@+id/fragment_profile_in_casting_1"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:background="#262626"
+                    android:background="@color/dialogBackground"
                     android:gravity="center"
                     android:text=""
-                    android:textColor="@color/whiteText"
+                    android:textColor="@color/white"
                     android:textSize="12sp"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent" />
@@ -252,17 +262,17 @@
             android:layout_marginTop="11dp"
             android:layout_marginStart="11dp"
             android:visibility="invisible"
-            android:background="@drawable/file_load_button_background"
             app:cardCornerRadius="9dp"
             android:id="@+id/fragment_profile_container2"
-            app:cardBackgroundColor="@color/darkBackground"
+            app:cardBackgroundColor="@color/black"
             app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/fragment_profile_container1">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@drawable/video_background">
 
                 <View
                     android:id="@+id/fragment_profile_settings2"
@@ -284,12 +294,23 @@
 
                     />
 
-                <ImageButton
-                    android:id="@+id/fragment_profile_add_video_btn_2"
+                <ImageView
+                    android:id="@+id/fragment_profile_add_icon2"
                     android:layout_width="22dp"
                     android:layout_height="22dp"
-                    android:background="@drawable/fragment_profile_add_video_img"
+                    android:background="@drawable/plus_icon"
+                    android:clickable="false"
                     android:contentDescription="@string/add"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/fragment_profile_add_video_btn_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/none_color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -299,10 +320,10 @@
                     android:id="@+id/fragment_profile_in_casting_2"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:background="#262626"
+                    android:background="@color/dialogBackground"
                     android:gravity="center"
                     android:text=""
-                    android:textColor="@color/whiteText"
+                    android:textColor="@color/white"
                     android:textSize="12sp"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent" />
@@ -320,8 +341,7 @@
             android:layout_marginTop="11dp"
             android:layout_marginBottom="11dp"
             android:visibility="invisible"
-            android:background="@drawable/file_load_button_background"
-            app:cardBackgroundColor="@color/darkBackground"
+            app:cardBackgroundColor="@color/black"
             app:cardCornerRadius="9dp"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -331,7 +351,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@drawable/video_background">
 
                 <View
                     android:id="@+id/fragment_profile_settings3"
@@ -353,12 +374,23 @@
 
                     />
 
-                <ImageButton
-                    android:id="@+id/fragment_profile_add_video_btn_3"
+                <ImageView
+                    android:id="@+id/fragment_profile_add_icon3"
                     android:layout_width="22dp"
                     android:layout_height="22dp"
-                    android:background="@drawable/fragment_profile_add_video_img"
+                    android:background="@drawable/plus_icon"
+                    android:clickable="false"
                     android:contentDescription="@string/add"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/fragment_profile_add_video_btn_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/none_color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -368,10 +400,10 @@
                     android:id="@+id/fragment_profile_in_casting_3"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:background="#262626"
+                    android:background="@color/dialogBackground"
                     android:gravity="center"
                     android:text=""
-                    android:textColor="@color/whiteText"
+                    android:textColor="@color/white"
                     android:textSize="12sp"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent" />
@@ -390,8 +422,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="11dp"
             android:visibility="invisible"
-            android:background="@drawable/file_load_button_background"
-            app:cardBackgroundColor="@color/darkBackground"
+            app:cardBackgroundColor="@color/black"
             app:cardCornerRadius="9dp"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -401,7 +432,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@drawable/video_background">
 
                 <View
                     android:id="@+id/fragment_profile_settings4"
@@ -423,12 +455,23 @@
 
                     />
 
-                <ImageButton
-                    android:id="@+id/fragment_profile_add_video_btn_4"
+                <ImageView
+                    android:id="@+id/fragment_profile_add_icon4"
                     android:layout_width="22dp"
                     android:layout_height="22dp"
-                    android:background="@drawable/fragment_profile_add_video_img"
+                    android:background="@drawable/plus_icon"
+                    android:clickable="false"
                     android:contentDescription="@string/add"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/fragment_profile_add_video_btn_4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/none_color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -438,10 +481,10 @@
                     android:id="@+id/fragment_profile_in_casting_4"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:background="#262626"
+                    android:background="@color/dialogBackground"
                     android:gravity="center"
                     android:text=""
-                    android:textColor="@color/whiteText"
+                    android:textColor="@color/white"
                     android:textSize="12sp"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent" />
