--- a/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/darkBackground"
+    android:background="@color/black"
     tools:context=".presentation.main.fragments.profile.profileSettings.ProfileSettingsFragment"
     tools:ignore="LabelFor" >
 
@@ -49,8 +49,8 @@
             android:layout_marginEnd="12dp"
             android:textSize="17sp"
             android:text="@string/seven_points"
-            android:textColor="@color/whiteText"
-            android:textCursorDrawable="@color/whiteText"
+            android:textColor="@color/white"
+            android:textCursorDrawable="@color/white"
             android:inputType="none"
             android:background="@color/none_color"
             android:paddingTop="5dp"
@@ -105,10 +105,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:textSize="17sp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:inputType="none"
             android:background="@color/none_color"
-            android:textCursorDrawable="@color/whiteText"
+            android:textCursorDrawable="@color/white"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:enabled="false"
@@ -132,7 +132,7 @@
         android:gravity="left"
         android:text="@string/cant_change_mail"
         android:textColorLink="@color/colorAccent"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/grayText"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
