--- a/TalentShow/app/src/main/res/layout/fragment_profile_video_bottom_sheet.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_video_bottom_sheet.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="240dp"
     android:orientation="vertical"
-    android:background="@color/lightDark"
+    android:background="@color/dialogBackground"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="16dp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:text="@string/send_to_casting"/>
     </LinearLayout>
     <LinearLayout
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:layout_marginStart="16dp"
             android:text="Изменить интервал"/>
     </LinearLayout>
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:layout_marginStart="16dp"
             android:text="Поделиться видео"/>
     </LinearLayout>
@@ -67,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:layout_marginStart="16dp"
             android:text="@string/delete"/>
     </LinearLayout>
