--- a/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/darkBackground"
+        android:background="@color/black"
         tools:context=".presentation.main.fragments.profile.ProfileFragment"
         android:id="@+id/fragment_profile_parent">
 
@@ -42,7 +42,7 @@
             android:textSize="22sp"
             android:textStyle="bold"
             android:visibility="invisible"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:layout_marginTop="17dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="20dp"
@@ -56,7 +56,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/description"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:layout_marginTop="20dp"
             android:layout_marginStart="16dp"
@@ -69,10 +69,9 @@
             android:id="@+id/fragment_public_profile_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/no_description"
             android:gravity="top"
             android:textSize="15sp"
-            android:visibility="invisible"
+            android:visibility="visible"
             android:textColor="@color/grayText"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
@@ -89,7 +88,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
             android:text="@string/all_videos"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -122,7 +121,7 @@
                 android:id="@+id/fragment_public_profile_video_1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/darkBackground"
+                android:background="@color/black"
                 android:visibility="gone" />
 
         </androidx.cardview.widget.CardView>
@@ -155,7 +154,7 @@
                 android:id="@+id/fragment_public_profile_video_2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/darkBackground"
+                android:background="@color/black"
                 android:visibility="gone" />
 
         </androidx.cardview.widget.CardView>
@@ -190,7 +189,7 @@
                 android:id="@+id/fragment_public_profile_video_3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/darkBackground"
+                android:background="@color/black"
                 android:visibility="gone" />
 
         </androidx.cardview.widget.CardView>
@@ -226,7 +225,7 @@
                 android:id="@+id/fragment_public_profile_video_4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/darkBackground"
+                android:background="@color/black"
                 android:visibility="gone" />
 
         </androidx.cardview.widget.CardView>
