--- a/TalentShow/app/src/main/res/layout/fragment_rating.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_rating.xml
@@ -2,17 +2,15 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBackground"
+    android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/main.appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true"
-        >
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/main.collapsing"
@@ -21,17 +19,14 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginStart="10dp"
-            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="16dp"
+            app:expandedTitleMarginEnd="16dp"
             app:expandedTitleGravity="bottom"
-            app:expandedTitleMarginBottom="10dp"
-
-            >
+            app:expandedTitleMarginBottom="5dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
+                android:layout_height="match_parent">
 
                 <ProgressBar
                     android:id="@+id/fragment_rating_progressbar"
@@ -40,8 +35,7 @@
                     android:layout_marginTop="15dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    />
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/fragment_casting_text_semi"
@@ -49,14 +43,13 @@
                     android:layout_height="wrap_content"
                     android:text="@string/xce_factor_semifinalists"
                     android:textSize="20sp"
-                    android:textColor="@color/whiteText"
+                    android:textColor="@color/white"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="17dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="16dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    />
+                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <TextView
                     android:id="@+id/fragment_casting_text1"
@@ -64,14 +57,13 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="20sp"
-                    android:textColor="@color/whiteText"
+                    android:textColor="@color/white"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="17dp"
+                    android:layout_marginTop="13dp"
                     android:layout_marginEnd="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/rating_recycler_semifinalists"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    />
+                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <TextView
                     android:id="@+id/rating_no_semifinalists"
@@ -80,28 +72,24 @@
                     android:text="В этом разделе появятся полуфиналисты"
                     android:textSize="16sp"
                     android:gravity="center"
-                    android:textColor="@color/whiteText"
+                    android:textColor="@color/white"
                     android:paddingStart="5dp"
                     android:paddingEnd="5dp"
                     android:paddingBottom="5dp"
                     android:paddingTop="13dp"
                     app:layout_constraintTop_toBottomOf="@+id/fragment_casting_text_semi"
-                    app:layout_constraintBottom_toTopOf="@id/fragment_casting_text1"
-                    />
+                    app:layout_constraintBottom_toTopOf="@id/fragment_casting_text1" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rating_recycler_semifinalists"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="5dp"
-                    android:paddingBottom="5dp"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
                     android:paddingTop="13dp"
                     app:layout_constraintTop_toBottomOf="@+id/fragment_casting_text_semi"/>
 
-
             </androidx.constraintlayout.widget.ConstraintLayout>
-
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/main.toolbar"
@@ -110,46 +98,17 @@
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:layout_collapseMode="pin"
                 app:title="@string/top_20"
-                app:titleMarginStart="10dp"
-                app:titleMarginBottom="10dp"
-                />
-
-
+                app:titleMarginStart="16dp"
+                app:titleMarginBottom="5dp" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-
-
     </com.google.android.material.appbar.AppBarLayout>
-
-
-
-
-
-
-
-
-
-
-
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rating_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
-                android:paddingBottom="5dp"
-                android:paddingTop="13dp"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                />
-
-
-
-
-
-
-
-
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
