--- a/TalentShow/app/src/main/res/layout/fragment_video_choose_just.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_video_choose_just.xml
@@ -3,66 +3,75 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/darkBackground">
+    android:background="@color/black">
+
     <TextView
         android:id="@+id/fragment_video_load_just_text1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/whiteText"
-        android:textSize="34sp"
-        android:text="@string/want_load_video"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="60dp"
-        android:gravity="center"
         android:fontFamily="@font/quantico"
-        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center"
+        android:text="@string/want_load_video"
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2"/>
 
     <View
         android:id="@+id/fragment_file_load_just_button_add"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:padding="15dp"
+        android:layout_marginTop="110dp"
         android:background="@drawable/blue_circle"
-        app:layout_constraintStart_toStartOf="parent"
+        android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_video_load_just_text1"
+        app:layout_constraintVertical_bias="0.35" />
 
     <View
+        android:id="@+id/view2"
         android:layout_width="22dp"
         android:layout_height="22dp"
         android:background="@drawable/plus_icon"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_file_load_just_button_add"
+        app:layout_constraintEnd_toEndOf="@+id/fragment_file_load_just_button_add"
+        app:layout_constraintStart_toStartOf="@+id/fragment_file_load_just_button_add"
+        app:layout_constraintTop_toTopOf="@+id/fragment_file_load_just_button_add" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:textColor="@color/whiteText"
-        android:textSize="17sp"
-        android:text="@string/add_video"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/fragment_file_load_just_button_add"
+        android:text="@string/add_video"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/fragment_file_load_just_button_add" />
 
     <TextView
         android:id="@+id/fragment_video_load_just_skip"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="81dp"
-        android:text="@string/skip_auth"
-        android:textSize="17sp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         android:gravity="center"
-        android:textColor="@color/whiteText"
+        android:text="@string/skip_auth"
+        android:textColor="@color/white"
+        android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
