--- a/TalentShow/app/src/main/res/layout/fragment_welcome.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_welcome.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/darkBackground">
+        android:background="@color/black">
 
         <View
             android:id="@+id/fragment_welcome_logo"
@@ -28,33 +28,35 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginTop="32dp"
-            android:textColor="@color/whiteText"
-            android:textSize="18sp"
-            android:text="@string/fragment_welcome_text"
             android:gravity="center"
+            android:text="@string/fragment_welcome_text"
+            android:textColor="@color/white"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_welcome_logo"/>
+            app:layout_constraintTop_toBottomOf="@id/fragment_welcome_logo" />
 
         <TextView
             android:id="@+id/fragment_welcome_btn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
+            android:layout_height="50dp"
             android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/buttons_background"
             android:gravity="center"
             android:text="@string/begin"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_welcome_text" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_welcome_text"
+            app:layout_constraintVertical_bias="0.45" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
