--- a/TalentShow/app/src/main/res/layout/info.xml
+++ b/TalentShow/app/src/main/res/layout/info.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/darkBackground">
+        android:background="@color/black">
 
 
         <TextView
@@ -24,7 +24,7 @@
             android:layout_marginEnd="32dp"
             android:gravity="center"
             android:textSize="18sp"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
