--- a/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
@@ -5,7 +5,7 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/darkBackground"
+    android:background="@color/black"
     android:orientation="vertical">
 
 
@@ -18,7 +18,7 @@
         android:layout_marginEnd="6dp"
         app:cardUseCompatPadding="true"
         app:cardElevation="2dp"
-        app:cardBackgroundColor="@color/whiteText"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
                 android:gravity="center"
                 android:lineSpacingExtra="1sp"
                 android:textSize="24sp"
-                android:textColor="@color/whiteText"
+                android:textColor="@color/white"
                 android:elevation="20dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
@@ -59,15 +59,14 @@
 
             <ImageView
                 android:id="@+id/rating_item_share_btn"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/share_btn"
-                android:layout_marginTop="19dp"
-                android:layout_marginEnd="10dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginEnd="16dp"
                 android:elevation="20dp"
+                android:src="@drawable/share_btn"
+                app:layout_constraintBottom_toBottomOf="@+id/rating_item_pos"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="@+id/rating_item_pos" />
 
             <View
                 android:id="@+id/rating_item_restart"
@@ -84,7 +83,7 @@
                 android:id="@+id/rating_item_progressbar"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -113,6 +112,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
 
+                <ImageView
+                    android:id="@+id/rating_item_ava_back"
+                    android:layout_width="31dp"
+                    android:layout_height="31dp"
+                    android:elevation="-1dp"
+                    android:background="@drawable/blue_circle"
+                    app:layout_constraintBottom_toBottomOf="@+id/rating_item_ava"
+                    app:layout_constraintEnd_toEndOf="@+id/rating_item_ava"
+                    app:layout_constraintStart_toStartOf="@+id/rating_item_ava"
+                    app:layout_constraintTop_toTopOf="@+id/rating_item_ava" />
 
             <ImageView
                 android:id="@+id/rating_item_ava"
@@ -120,9 +129,9 @@
                 android:layout_height="28dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="310dp"
+                android:elevation="1dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/rating_item_description"
-                />
+                app:layout_constraintBottom_toTopOf="@+id/rating_item_description" />
 
             <TextView
                 android:id="@+id/rating_item_likes"
@@ -131,7 +140,7 @@
                 android:layout_marginStart="2dp"
                 android:gravity="center"
                 android:lineSpacingExtra="1sp"
-                android:textColor="@color/whiteText"
+                android:textColor="@color/white"
                 app:layout_constraintStart_toEndOf="@+id/rating_item_heart_icon"
                 app:layout_constraintBottom_toBottomOf="@+id/rating_item_heart_icon"
                 app:layout_constraintTop_toTopOf="@+id/rating_item_heart_icon"/>
@@ -157,7 +166,7 @@
                 android:gravity="center_vertical"
                 android:lineSpacingExtra="1sp"
                 android:text="@string/activity_casting_name"
-                android:textColor="@color/whiteText"
+                android:textColor="@color/white"
                 android:layout_marginStart="6dp"
                 app:layout_constraintStart_toEndOf="@+id/rating_item_ava"
                 app:layout_constraintTop_toTopOf="@+id/rating_item_ava"
@@ -176,7 +185,7 @@
                 android:lineSpacingExtra="2sp"
                 android:maxLines="3"
                 android:text="Это описание к видео, которое написал автор, чтобы было понятно, что он хочет сказать своим творчеством. Наверное, тут очень ограничен обхем текста."
-                android:textColor="@color/whiteText"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/rating_item_ava" />
