--- a/TalentShow/app/src/main/res/layout/rating_recycler_semifinalists_item.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_semifinalists_item.xml
@@ -29,7 +29,7 @@
         android:id="@+id/rating_recycler_semifinalists_name_item"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/white"
         android:maxLines="1"
         android:gravity="center"
         android:layout_marginTop="4dp"
